--- a/scrollpopupview/build.gradle
+++ b/scrollpopupview/build.gradle
@@ -3,25 +3,24 @@ apply plugin: 'com.android.library'
 
 
 ext {
-    bintrayRepo = 'maven'////bintray上的仓库名，一般为maven
-    bintrayName = 'scrollpopupview'//bintray上的项目名
+    bintrayRepo = 'maven'
+    bintrayName = 'scrollpopupview'
 
-    publishedGroupId = 'com.kermit'//JCenter的GroupId
-    artifact = 'scrollpopupview'//JCenter的ArtifactId,但是还是以包名为准
+    publishedGroupId = 'com.kermit'
+    artifact = 'scrollpopupview'
 
     siteUrl = 'https://github.com/Kermit95/ScrollPopupView'
     gitUrl = 'https://github.com/Kermit95/ScrollPopupView'
 
-    libraryVersion = '1.0.0'//版本号
-    libraryName = 'scrollpopupview'//项目名字，没什么用
-    libraryDescription = 'a view help with recyclerview and scollview.'//项目描述，没什么用
+    libraryVersion = '1.0.0'
+    libraryName = 'scrollpopupview'
+    libraryDescription = 'a view help with recyclerview and scollview.'
 
-    //开发者信息
+
     developerId = 'Kermit95'
     developerName = 'Kermit95'
     developerEmail = 'kermitwang95@gmail.com'
 
-    //以上所有信息自行修改，以下不变
 
     licenseName = 'The Apache Software License, Version 2.0'
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
